Update JavaScript Conditionals if, else if, else ladder.html

--- a/JavaScript Conditionals if, else if, else ladder.html
+++ b/JavaScript Conditionals if, else if, else ladder.html
@@ -11,6 +11,9 @@
     <!-- Q1:Write a simple if statement in JavaScript that checks if a variable x is greater than 10. -->
 
     <script>
+    
+        // Basic if statement: JavaScript main ek simple if statement likho jo check kare ki ek variable x 10 se bada hai ya nahi.
+
         const x = prompt("Enter any numbers");
         if (x > 10) {
 
